# sca-skills

./: .commitlintrc.json  .gitignore  .release-please-config.json  .release-please-manifest.json  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  QUICK_START_PUBLISHING.md  README.md  package-lock.json  package.json  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: README.md  TESTING.md  ci.yml  publish.yml  release-please.yml
lint_configs/python/: pyproject-linters.toml
markdown/: README.md  package.json
mcp-server/: package.json
mcp-server/scripts/: postinstall.sh
mcp-server/skills/sca-guardrails/: PROCEDURE.md  README.md
mcp-server/src/: server.ts
mcp-server/src/runners/: eslint.ts
python/: README.md  pyproject.toml  ruff.toml
python/lint_configs/: __init__.py  ruff.toml
skill/: skill.md
typescript/: .eslintrc.js  .gitignore  .prettierrc.js  README.md  eslint.config.js  index.js  package-lock.json  package.json  tsconfig.examples.json
typescript/docs/: IDE_SETUP.md  MIGRATION.md  TROUBLESHOOTING.md
typescript/typescript/: CHANGELOG.md
