[project]
name = "cajias-linter-configs"
version = "1.0.0"
description = "Canonical linting configurations for Python projects with minimal ignores"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["linting", "code-quality", "ruff", "mypy", "pylint", "configuration"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/cajias/lint-configs"
Repository = "https://github.com/cajias/lint-configs"
Issues = "https://github.com/cajias/lint-configs/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lint_configs"]

[tool.hatch.build.targets.wheel.force-include]
"python/pyproject-linters.toml" = "lint_configs/python/pyproject-linters.toml"
